--- a/miniprogram/pages/index/index.wxss
+++ b/miniprogram/pages/index/index.wxss
@@ -56,7 +56,7 @@ swiper {
 }
 
 .meta .items .item-title {
-    font-size: 50rpx;
+    font-size: 40rpx;
     animation: fadeIn 2s;
 }
 
@@ -131,4 +131,72 @@ swiper {
     font-size: 24rpx;
     color: #ffffff;
     text-decoration: underline;
+}
+
+/* 月刊 */
+.magazine-area {
+    height: 940rpx;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+.magazine-area .title {
+    margin-top: 120rpx;
+    font-size: 50rpx;
+}
+
+.magazine-area .magazine-cover {
+    margin-top: 44rpx;
+    width: 441rpx;
+    height: 555rpx;
+}
+
+.magazine-area .magazine-title {
+    margin-top: 24rpx;
+    font-size: 30rpx;
+}
+
+.page {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    background-color: #fff;
+}
+.icon-banner {
+    width: 87vw;
+    padding: 68rpx;
+    background-color: #f4f4f6;
+    box-sizing: border-box;
+    border-radius: 20rpx;
+    margin-bottom: 50rpx;
+}
+
+.icon-banner .content {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+}
+
+.icon-banner .content .info {
+    display: flex;
+    flex-direction: column;
+}
+.icon-banner .content .info .title {
+    font-size: 35rpx;
+    font-weight: bold;
+    margin-bottom: 24rpx;
+}
+.icon-banner .content .info .subtitle {
+    font-size: 24rpx;
+
+}
+
+
+
+
+
+.icon-banner .content .icon {
+    width: 196rpx;
+    height: 120rpx;
 }
