--- a/miniprogram/pages/index/index.wxml
+++ b/miniprogram/pages/index/index.wxml
@@ -1,36 +1,5 @@
 <view class="page">
-    <view class="swiper-area">
-        <swiper bindchange="onSwiperChange">
-            <swiper-item wx:for="{{ list }}" wx:key="index">
-                <view class="swiper-item">
-                    <image src="{{item.imageUrl}}" mode="aspectFill"></image>
-                </view>
-            </swiper-item>
-        </swiper>
-        <view wx:for="{{ list }}" wx:key="index" wx:if="{{ index == current }}" class="swiper-content">
-            <view class="title">
-                {{ item.title }}
-            </view>
-
-            <view class="meta">
-                <view wx:for="{{ item.specs }}" wx:key="index" class="items">
-                    <view class="item-title">{{ item.title }}</view>
-                    <view class="item-subtitle">{{ item.subtitle }}</view>
-                </view>
-            </view>
-
-            <view class="action">
-                <view class="boot-btn">
-                    <button>预约试驾</button>
-                    <view class="boot-btn-back"></view>
-                </view>
-                <view class="view-configuration">查看配置</view>
-            </view>
-        </view>
-        <view class="swiper-dots">
-            <view wx:for="{{ list }}" wx:key="index" class="dot {{ current == index ? 'active': '' }}"></view>
-        </view>
-    </view>
+    <tesla-swiper style="width: 100%;" wx:if="{{ list.length }}" data="{{ list }}" />
     <view class="magazine-area">
         <view class="title">T zone</view>
         <image class="magazine-cover" src="https://china-community-app.tesla.cn/wechatmini/magazine/magazine01.png"></image>
