--- a/miniprogram/components/tesla-swiper/index.wxss
+++ b/miniprogram/components/tesla-swiper/index.wxss
@@ -65,6 +65,7 @@ swiper {
 }
 
 .swiper-content .action {
+    pointer-events: all;
     margin-top: 70rpx;
     display: flex;
     flex-direction: column;
