--- a/miniprogram/pages/index/index.wxml
+++ b/miniprogram/pages/index/index.wxml
@@ -4,8 +4,8 @@
      />
     <view class="magazine-area">
         <view class="title">T zone</view>
-        <image class="magazine-cover" src="https://china-community-app.tesla.cn/wechatmini/magazine/magazine01.png"></image>
-        <view class="magazine-title">2021年9月号</view>
+        <image bindtap="clickMagazine" data-id="{{ magezine._id }}" class="magazine-cover" src="{{ magezine.cover }}"></image>
+        <view class="magazine-title">{{magezine.title}}</view>
     </view>
 
     <view class="icon-banner">
